# train-spider

./: .gitignore  README.md  UI.md
src/: index.html  main.js  matrix.css  package.json  vite.config.ts
src-tauri/: .envrc  .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/nix/: flake.nix  shell.nix
src-tauri/src/: lib.rs
